--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,10 @@ version: 0.0.{build}
 max_jobs: 1
 image: Visual Studio 2017
 clone_folder: C:\prj\test-appveyor
-build:
-  verbosity: minimal
+build_script:
+- cmd: >-
+    cd C:\Python36-x64
+    dir
 artifacts:
 - path: dist\process_avtx.zip
 
