--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ image: Visual Studio 2017
 clone_folder: C:\prj\test-appveyor
 build_script:
 - cmd: >-
-    virtualenv venv
+    c:\Python36-x64\python -m virtualenv venv
 
     venv\Scripts\activate
 
