--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,13 @@ image: Visual Studio 2017
 clone_folder: C:\prj\test-appveyor
 build_script:
 - cmd: >-
+    cd C:\prj\test-appveyor
+
     c:\Python36-x64\python -m virtualenv venv
 
     venv\Scripts\activate
 
-    python -m pip install pip<19.0
+    python -m pip install "pip<19.0"
 
     pip install -r requirements.txt
 
