--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,16 +18,16 @@ build_script:
 
     pip list
 
-    rem pip install -r requirements.txt
+    pip install -r requirements.txt
 
-    rem pip install pyinstaller
+    pip install pyinstaller
 
-    rem "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+    "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
 
-    rem cl.exe /D_USRDLL /D_WINDLL deca/process_image.c /link /DLL /OUT:process_image.dll
+    cl.exe /D_USRDLL /D_WINDLL deca/process_image.c /link /DLL /OUT:process_image.dll
 
-    rem pyinstaller process_avtx.py
+    pyinstaller process_avtx.py
 
 artifacts:
-- path: dist\process_avtx.zip
+- path: dist\process_avtx
 
