--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,6 @@ build_script:
 
     pip list
 
-    pip install -r test-appveyor/requirements.txt
-
     pip install pyinstaller
 
     pip install cython
@@ -38,7 +36,9 @@ build_script:
 
     md compile_pyd
 
-    xcopy .\*.pyd compile_pyd /s
+    echo .compile_pyd>exclude.txt
+
+    xcopy .\*.pyd compile_pyd /exclude:exclude.txt /s
 
     dir
 
