--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ version: build-{build}
 max_jobs: 1
 image: Visual Studio 2017
 clone_folder: C:\prj\test-appveyor
+platform:
+    - x86
+    - x64
 build_script:
 - cmd: >-
     SET
