--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,15 +7,15 @@ build_script:
 - cmd: >-
     SET
 
-    SET PATH=C:\Python36-x64;C:\Python36-x64\Scripts;%path%
+    SET PATH=C:\Python36;C:\Python36\Scripts;%path%
 
     cd C:\prj
 
-    c:\Python36-x64\python --version
+    c:\Python36\python --version
 
-    c:\Python36-x64\python -m pip list
+    c:\Python36\python -m pip list
 
-    c:\Python36-x64\python -m virtualenv venv
+    c:\Python36\python -m virtualenv venv
 
     venv\Scripts\activate
 
