--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,55 +4,21 @@ image: Visual Studio 2017
 clone_folder: C:\prj\test-appveyor
 
 build_script:
-- ps: >-
-    SET
+- ps: cd C:\prj\test-appveyor
+- ps: .\appveyor_windows_steps.ps1
 
-    SET PATH=C:\Python36;C:\Python36\Scripts;%path%
-
-    cd C:\prj
-
-    c:\Python36\python --version
-
-    c:\Python36\python -m pip list
-
-    c:\Python36\python -m virtualenv venv
-
-    venv\Scripts\activate
-
-    python -m pip install "pip<19.0"
-
-    pip list
-
-    pip install pyinstaller
-
-    pip install cython
-
-    pip install numpy
-
-    cd C:\prj\test-appveyor
-
-    "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-
-    python setup.py build_ext --inplace
-
-    md ..\compile_pyd
-
-    xcopy .\*.pyd ..\compile_pyd /s /y
-
-#xcopy .\*.pyd compile_pyd /exclude:exclude.txt /s
-
-after_build:
-    7z a .\compile_pyd-b%APPVEYOR_BUILD_NUMBER%.zip ..\compile_pyd\*
-
-    dir
-
-    chdir
+#after_build:
+#    7z a .\compile_pyd-b%APPVEYOR_BUILD_NUMBER%.zip ..\compile_pyd\*
+#
+#    dir
+#
+#    chdir
 
 artifacts:
-- path: compile_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
+- path: compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
 
 deploy:
-  artifact: compile_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
+  artifact: compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
   prerelease: true
   description: 'Test Release'
   provider: GitHub
