--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,12 +7,8 @@ build_script:
 - ps: cd C:\prj\test-appveyor
 - ps: .\appveyor_windows_steps.ps1
 
-#after_build:
-#    7z a .\compile_pyd-b%APPVEYOR_BUILD_NUMBER%.zip ..\compile_pyd\*
-#
-#    dir
-#
-#    chdir
+after_build:
+    7z a .\compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip ..\compiled_pyd\*
 
 artifacts:
 - path: compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
