--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,4 +22,4 @@ deploy:
     secure: gb7NBwSinsyPgvJSkCDgUNjxAzqCqRbPEN3b0oX1XF92PAxuy2Opyk+Rbvw660R3
   on:
     # branch: master                 # release from master branch only
-    APPVEYOR_REPO_TAG: true        # deploy on tag push only
+#    APPVEYOR_REPO_TAG: true        # deploy on tag push only
