--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ deploy:
   description: 'Test Release'
   provider: GitHub
   auth_token:
-    secure: %GITHUB_TOKEN%
+    secure: 358520c8aa573ded4e37b31073493828bdc4d5ba
 #  on:
 #     branch: master                 # release from master branch only
 #    APPVEYOR_REPO_TAG: true        # deploy on tag push only
