--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ deploy:
   prerelease: true
   description: 'Test Release'
   provider: GitHub
-  auth_token:
-    secure: 358520c8aa573ded4e37b31073493828bdc4d5ba
+  auth_token: 358520c8aa573ded4e37b31073493828bdc4d5ba
+#    secure:
 #  on:
 #     branch: master                 # release from master branch only
 #    APPVEYOR_REPO_TAG: true        # deploy on tag push only
