--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,12 +13,16 @@ after_build:
 artifacts:
 - path: compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
 
+environment:
+  my_variable:
+    secure: EtPzN/tNyp4noOA6WEC9WmAXJT3sWa7/E9Ba0Wv4Fvu+2KSsaOX3VDtgMyYkJjI9
+
 deploy:
   artifact: compiled_pyd-b%APPVEYOR_BUILD_NUMBER%.zip
   prerelease: true
   description: 'Test Release'
   provider: GitHub
-  auth_token: 358520c8aa573ded4e37b31073493828bdc4d5ba
+#  auth_token: 358520c8aa573ded4e37b31073493828bdc4d5ba
 #    secure:
 #  on:
 #     branch: master                 # release from master branch only
